--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -243,4 +243,22 @@ select.parsley-error {
     }
 }
 
+hr {
+    margin: 3em 0 1em;
+    padding: 0;
+    border: none;
+    border-top: 1px solid #B3B3B3;
+    color: #B3B3B3;
+    text-align: center;
+}
+hr:after {
+    content: "§";
+    display: inline-block;
+    position: relative;
+    top: -0.9em;
+    font-size: 1em;
+    padding: 0 0.25em;
+    background: white;
+}
+
 /*# sourceMappingURL=main.css.map */
