--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -87,6 +87,7 @@ input[type=email],
 input[type=password],
 input[type=number],
 input[type=date],
+input[type=url],
 input.country-selector,
 input[role=textarea],
 textarea {
